--- a/src/components/Index/FigureIndex.css
+++ b/src/components/Index/FigureIndex.css
@@ -22,9 +22,9 @@ button {
 .figure-wrapper {
   display: inline-block;
   margin-top: 30px;
-  padding: 30px;
+  padding: 50px 0 0 80px;
   width: 100%;
-  height: 300px;
+  height: 250px;
   background-size: 100% 100%; }
 
 .figure-item-wrapper {
