--- a/src/components/Index/FigureIndex.scss
+++ b/src/components/Index/FigureIndex.scss
@@ -5,9 +5,9 @@
 .figure-wrapper {
   display: inline-block;
   margin-top: 30px;
-  padding: 30px;
+  padding: 50px 0 0 80px;
   width: 100%;
-  height: 300px;
+  height: 250px;
   background-size: 100% 100%;
 }
 
