--- a/src/components/Layout/Navigator.scss
+++ b/src/components/Layout/Navigator.scss
@@ -16,6 +16,7 @@
     cursor: pointer;
     p {
       font-weight: 400;
+      color: $main-color;
     }
   }
 
@@ -53,6 +54,11 @@ li {
 
   &:hover {
     background-color: $background-color;
+    color: $main-color;
+
+    a {
+      color: $main-color;
+    }
   }
 }
 
@@ -63,6 +69,11 @@ li {
 .el-dropdown-menu {
   margin-top: 5px;
   margin-left: 20px;
+
+  a {
+    color: $grey;
+    text-decoration: none;
+  }
 }
 
 .el-dropdown-menu__item:not(.is-disabled) {
