--- a/src/components/Committee/Committee.scss
+++ b/src/components/Committee/Committee.scss
@@ -16,9 +16,10 @@
     font-weight: 400;
 
     span {
-      color: $light-grey;
-      font-size: 14px;
+      color: $grey;
+      font-size: 16px;
       margin-left: 20px;
+      font-weight: 300;
     }
   }
 
@@ -28,8 +29,4 @@
     font-size: 14px;
     font-weight: 400;
   }
-}
-
-.first-wrapper {
-  margin-top: 100px;
 }
