--- a/src/components/Layout/Navigator.scss
+++ b/src/components/Layout/Navigator.scss
@@ -3,12 +3,12 @@
 @import "../../assets/scss/mixin";
 
 .nav-wrapper {
-  height: 50px;
+  height: 6%;
   width: 100%;
   z-index: 10;
   background-color: $white-color;
   position: fixed;
-  box-shadow: 0px 1px 3px $light-grey;
+  box-shadow: 0 1px 3px $light-grey;
 
   .left-wrapper {
     display: inline-block;
