--- a/src/components/Index/SingleNotice.scss
+++ b/src/components/Index/SingleNotice.scss
@@ -5,6 +5,7 @@
 .single-notice-wrapper {
   padding: 8px;
   border-bottom: solid 1px $border-color;
+  width: 100%;
 
   .content {
     cursor: pointer;
