--- a/src/components/Index/NoticeIndex.scss
+++ b/src/components/Index/NoticeIndex.scss
@@ -6,13 +6,18 @@
   display: inline-block;
   margin-top: 30px;
   padding: 30px;
-  width: 700px;
+  width: 100%;
   height: auto;
   background-color: #FFF;
+
+  .notice-left-wrapper {
+    display: inline-block;
+    width: 50%;
+  }
 }
 
 .more-button {
-  float: right;
+  //float: right;
   margin-top: 20px;
   padding: 5px 20px;
   border-radius: 100px;
