--- a/src/components/Index/Photo.scss
+++ b/src/components/Index/Photo.scss
@@ -3,10 +3,9 @@
 @import "../../assets/scss/mixin";
 
 .photo-wrapper {
-  margin-top: 30px;
-  padding: 30px;
-  width: 460px;
-  float: right;
+  display: inline-block;
+  width: 40%;
+  margin-left: 5%;
   background-color: #FFF;
 }
 
