--- a/src/components/Index/SingleNotice.css
+++ b/src/components/Index/SingleNotice.css
@@ -21,7 +21,8 @@ button {
  */
 .single-notice-wrapper {
   padding: 8px;
-  border-bottom: solid 1px #e8e8e8; }
+  border-bottom: solid 1px #e8e8e8;
+  width: 100%; }
   .single-notice-wrapper .content {
     cursor: pointer;
     display: inline-block;
