--- a/src/components/Index/SingleSubIndex.css
+++ b/src/components/Index/SingleSubIndex.css
@@ -19,36 +19,40 @@ button {
 /*
  * grid
  */
-.single-intro {
-  margin-top: 10px;
+.single-sub {
   padding: 10px;
   background-color: #ffffff;
   cursor: pointer;
   text-align: center;
-  height: 220px; }
-  .single-intro:hover {
-    border: 2px white solid; }
-    .single-intro:hover .name, .single-intro:hover .intro {
-      color: #4e7ede;
-      -webkit-transition: all, 0.3s;
-      -moz-transition: all, 0.3s;
-      -ms-transition: all, 0.3s;
-      -o-transition: all, 0.3s;
-      transition: all, 0.3s; }
-  .single-intro .img-wrapper {
+  height: 250px;
+  width: 220px;
+  display: inline-block; }
+  .single-sub:hover .name, .single-sub:hover .intro {
+    color: #4e7ede;
+    -webkit-transition: all, 0.3s;
+    -moz-transition: all, 0.3s;
+    -ms-transition: all, 0.3s;
+    -o-transition: all, 0.3s;
+    transition: all, 0.3s; }
+  .single-sub .img-wrapper {
     width: 100%;
     height: 100%;
     background-repeat: no-repeat;
     background-position: center center;
     background-size: cover;
-    width: 100%;
-    height: 140px; }
-  .single-intro .name {
+    position: absolute;
+    margin: auto;
+    top: 0;
+    left: 0;
+    right: 0;
+    width: 60%;
+    height: 50%; }
+  .single-sub .name {
     font-size: 14px;
     color: #595959;
-    margin: 10px 0 5px 0;
+    margin: 120px 0 5px 0;
     font-weight: 500; }
-  .single-intro .intro {
+  .single-sub .intro {
     font-size: 12px;
     color: #595959; }
 
