--- a/src/components/Index/SingleNotice.css
+++ b/src/components/Index/SingleNotice.css
@@ -20,13 +20,13 @@ button {
  * grid
  */
 .single-notice-wrapper {
-  padding: 8px;
+  padding: 1.5%;
   border-bottom: solid 1px #e8e8e8;
   width: 100%; }
   .single-notice-wrapper .content {
     cursor: pointer;
     display: inline-block;
-    font-size: 14px;
+    font-size: 80%;
     font-weight: 400;
     color: #595959; }
     .single-notice-wrapper .content:hover {
@@ -39,7 +39,7 @@ button {
   .single-notice-wrapper .time {
     float: right;
     display: inline-block;
-    font-size: 14px;
+    font-size: 80%;
     font-weight: 300;
     color: #bababa; }
 
