--- a/src/components/Index/SubIndex.scss
+++ b/src/components/Index/SubIndex.scss
@@ -2,7 +2,7 @@
 @import "../../assets/scss/base";
 @import "../../assets/scss/mixin";
 
-.index-wrapper {
+.sub-index-wrapper {
   display: inline-block;
   margin-top: 3%;
   padding: 4%;
