--- a/src/components/Banner/Banner.css
+++ b/src/components/Banner/Banner.css
@@ -22,7 +22,7 @@ button {
 .banner-wrapper {
   display: inline-block;
   width: 100%;
-  height: 350px;
+  height: 100%;
   text-align: left; }
   .banner-wrapper .img-wrapper {
     width: 100%;
@@ -32,14 +32,13 @@ button {
     background-size: cover; }
 
 .title-wrapper {
-  padding-top: 120px;
-  padding-left: 100px; }
+  padding: 10% 10%; }
   .title-wrapper .main-title {
-    font-size: 51px;
+    font-size: 300%;
     font-weight: 500;
     color: #ffffff; }
   .title-wrapper .sub-title {
-    font-size: 35px;
+    font-size: 210%;
     font-weight: 500;
     color: #ffffff; }
 
