--- a/src/components/Banner/Banner.scss
+++ b/src/components/Banner/Banner.scss
@@ -5,7 +5,7 @@
 .banner-wrapper {
   display: inline-block;
   width: 100%;
-  height: 350px;
+  height: 100%;
   text-align: left;
 
   .img-wrapper {
@@ -15,17 +15,16 @@
 }
 
 .title-wrapper {
-  padding-top: 120px;
-  padding-left: 100px;
+  padding: 10% 10%;
 
   .main-title {
-    font-size: 51px;
+    font-size: 300%;
     font-weight: 500;
     color: $white-color;
   }
 
   .sub-title {
-    font-size: 35px;
+    font-size: 210%;
     font-weight: 500;
     color: $white-color;
   }
