--- a/src/components/Index/NoticeIndex.css
+++ b/src/components/Index/NoticeIndex.css
@@ -21,22 +21,22 @@ button {
  */
 .notice-wrapper {
   display: inline-block;
-  margin-top: 30px;
-  padding: 30px;
+  margin-top: 3%;
+  padding: 4%;
   width: 100%;
   height: auto;
   background-color: #FFF; }
   .notice-wrapper .notice-left-wrapper {
     display: inline-block;
-    width: 50%; }
+    width: 100%; }
 
 .more-button {
-  margin-top: 20px;
-  padding: 5px 20px;
+  margin: 3% 0 0 70%;
+  padding: 1% 5%;
   border-radius: 100px;
   background-color: #4e7ede;
   color: #ffffff;
-  font-size: 14px;
+  font-size: 80%;
   vertical-align: middle;
   cursor: pointer;
   -webkit-transition: all, 0.3s;
