--- a/src/components/Index/NoticeIndex.scss
+++ b/src/components/Index/NoticeIndex.scss
@@ -4,26 +4,25 @@
 
 .notice-wrapper {
   display: inline-block;
-  margin-top: 30px;
-  padding: 30px;
+  margin-top: 3%;
+  padding: 4%;
   width: 100%;
   height: auto;
   background-color: #FFF;
 
   .notice-left-wrapper {
     display: inline-block;
-    width: 50%;
+    width: 100%;
   }
 }
 
 .more-button {
-  //float: right;
-  margin-top: 20px;
-  padding: 5px 20px;
+  margin: 3% 0 0 70%;
+  padding: 1% 5%;
   border-radius: 100px;
   background-color: $main-color;
   color: $white-color;
-  font-size: 14px;
+  font-size: 80%;
   vertical-align: middle;
   cursor: pointer;
   @include transition(all, 0.3s);
