--- a/src/components/Index/SingleIntroCard.css
+++ b/src/components/Index/SingleIntroCard.css
@@ -20,10 +20,9 @@ button {
  * grid
  */
 .single-intro {
-  margin-top: 40px;
-  padding: 10px 60px;
+  margin-top: 10%;
+  padding: 5% 10%;
   background-color: #ffffff;
-  height: 220px;
   text-align: center; }
   .single-intro .img-wrapper {
     width: 100%;
@@ -31,14 +30,19 @@ button {
     background-repeat: no-repeat;
     background-position: center center;
     background-size: cover;
-    width: 100px;
-    height: 100px;
-    padding: 60px;
+    position: absolute;
+    margin: auto;
+    top: 0;
+    left: 0;
+    right: 0;
+    width: 50%;
+    height: 55%;
+    padding: 6%;
     border: 10px #4e7ede solid;
     border-radius: 100px; }
   .single-intro .intro {
-    margin: 15px 0 5px 0;
-    font-size: 16px;
+    margin-top: 60%;
+    font-size: 100%;
     font-weight: 400;
     color: #4e7ede; }
 
