--- a/src/components/Index/SingleNotice.scss
+++ b/src/components/Index/SingleNotice.scss
@@ -3,14 +3,14 @@
 @import "../../assets/scss/mixin";
 
 .single-notice-wrapper {
-  padding: 8px;
+  padding: 1.5%;
   border-bottom: solid 1px $border-color;
   width: 100%;
 
   .content {
     cursor: pointer;
     display: inline-block;
-    font-size: 14px;
+    font-size: 80%;
     font-weight: 400;
     color: $grey;
 
@@ -23,7 +23,7 @@
   .time {
     float: right;
     display: inline-block;
-    font-size: 14px;
+    font-size: 80%;
     font-weight: 300;
     color: $light-grey;
   }
