--- a/src/components/Layout/Footer.css
+++ b/src/components/Layout/Footer.css
@@ -21,18 +21,18 @@ button {
  */
 .footer-wrapper {
   height: auto;
-  padding: 100px 0 50px 0;
+  padding: 5% 0 5% 0;
   background-color: #4e7ede;
   text-align: center;
   color: #ffffff;
-  margin-top: 100px; }
+  margin-top: 10%; }
   .footer-wrapper .name-wrapper {
     display: inline-block; }
     .footer-wrapper .name-wrapper span {
-      font-size: 14px; }
+      font-size: 90%; }
   .footer-wrapper .info-wrapper {
-    padding-top: 5px; }
+    padding-top: 1%; }
     .footer-wrapper .info-wrapper span {
-      font-size: 14px; }
+      font-size: 90%; }
 
 /*# sourceMappingURL=Footer.css.map */
