--- a/src/components/Layout/Footer.scss
+++ b/src/components/Layout/Footer.scss
@@ -4,25 +4,25 @@
 
 .footer-wrapper {
   height: auto;
-  padding: 100px 0 50px 0;
+  padding: 5% 0 5% 0;
   background-color: $main-color;
   text-align: center;
   color: $white-color;
-  margin-top: 100px;
+  margin-top: 10%;
 
   .name-wrapper {
     display: inline-block;
 
     span {
-      font-size: 14px;
+      font-size: 90%;
     }
   }
 
   .info-wrapper {
-    padding-top: 5px;
+    padding-top: 1%;
 
     span {
-      font-size: 14px;
+      font-size: 90%;
     }
   }
 }
