--- a/src/components/Layout/Navigator.css
+++ b/src/components/Layout/Navigator.css
@@ -27,20 +27,20 @@ button {
   position: fixed;
   box-shadow: 0 1px 3px #bababa; }
   .nav-wrapper .left-wrapper {
+    width: 10%;
     display: inline-block;
-    padding-top: 11px;
+    padding-top: 1%;
     cursor: pointer; }
     .nav-wrapper .left-wrapper p {
       font-weight: 400;
       color: #4e7ede; }
   .nav-wrapper .right-wrapper {
     display: inline-block;
-    padding-top: 11px;
-    float: right;
-    margin-right: 100px; }
+    padding-top: 1%;
+    width: 80%; }
     .nav-wrapper .right-wrapper .el-button, .nav-wrapper .right-wrapper .el-dropdown {
-      padding-left: 30px;
-      font-size: 15px;
+      padding-left: 1%;
+      font-size: 90%;
       font-weight: 400;
       color: #595959;
       -webkit-transition: all 0.5s;
@@ -56,7 +56,7 @@ button {
         transition: all 0.5s;
         color: #4e7ede; }
       .nav-wrapper .right-wrapper .el-button /deep/ .el-icon-caret-bottom:before, .nav-wrapper .right-wrapper .el-dropdown /deep/ .el-icon-caret-bottom:before {
-        font-size: 10px; }
+        font-size: 60%; }
 
 li {
   padding: 2px 10px;
