--- a/src/components/Util/DivHeader.css
+++ b/src/components/Util/DivHeader.css
@@ -20,13 +20,12 @@ button {
  * grid
  */
 .header-wrapper {
-  padding-bottom: 10px; }
+  padding-bottom: 3%; }
   .header-wrapper h4 {
     border-left: 5px solid #4e7ede;
-    margin-bottom: 15px;
-    padding-left: 10px;
+    padding-left: 1%;
     color: #4e7ede;
-    font-size: 16px;
+    font-size: 100%;
     font-weight: 400; }
 
 /*# sourceMappingURL=DivHeader.css.map */
