--- a/src/components/Util/DivHeader.scss
+++ b/src/components/Util/DivHeader.scss
@@ -4,14 +4,13 @@
 
 .header-wrapper {
 
-  padding-bottom: 10px;
+  padding-bottom: 3%;
 
   h4 {
     border-left: 5px solid $main-color;
-    margin-bottom: 15px;
-    padding-left: 10px;
+    padding-left: 1%;
     color: $main-color;
-    font-size: 16px;
+    font-size: 100%;
     font-weight: 400;
   }
 
