--- a/src/index.css
+++ b/src/index.css
@@ -25,13 +25,13 @@ button {
  */
 html .body-wrapper {
   width: 100%;
-  min-height: 1000px;
+  /*min-height: 1000px;*/
   height: 100%;
   background: #f3f3f3;
 }
 
 html .container {
-  width: 1200px;
+  width: 80%;
   margin: 0 auto;
 }
 
@@ -40,65 +40,3 @@ html .container:after {
   display: block;
   clear: both;
 }
-
-@media (max-width: 1005px) {
-  html .container {
-    width: 100%;
-  }
-}
-
-html .el-input__inner {
-  height: 30px;
-  border-radius: 100px;
-  border: #bababa solid 1px;
-  color: #595959;
-  font-size: 12px;
-}
-
-html .el-input__inner::-webkit-input-placeholder {
-  /* WebKit, Blink, Edge */
-  color: #bababa;
-  font-size: 12px;
-  font-weight: 400;
-}
-
-html .el-input__inner:-moz-placeholder {
-  /* Mozilla Firefox 4 to 18 */
-  color: #bababa;
-  font-size: 12px;
-  font-weight: 400;
-}
-
-html .el-input__inner::-moz-placeholder {
-  /* Mozilla Firefox 19+ */
-  color: #bababa;
-  font-size: 12px;
-  font-weight: 400;
-}
-
-html .el-input__inner:-ms-input-placeholder {
-  /* Internet Explorer 10-11 */
-  color: #bababa;
-  font-size: 12px;
-  font-weight: 400;
-}
-
-html .el-input__inner:hover, html .el-input__inner:focus {
-  border: #4e7ede solid 1px;
-  color: #595959;
-}
-
-html .el-input__icon {
-  color: #4e7ede;
-  line-height: 0;
-}
-
-html .el-input__icon.is-clickable:hover {
-  color: #4e7ede;
-}
-
-html .el-input__icon.is-clickable:hover + .el-input__inner {
-  border-color: #4e7ede;
-}
-
-/*# sourceMappingURL=index.css.map */
