--- a/src/components/Committee/Committee.scss
+++ b/src/components/Committee/Committee.scss
@@ -4,29 +4,22 @@
 
 .committee-wrapper {
   display: inline-block;
-  margin-top: 30px;
-  padding: 30px;
+  margin-top: 3%;
+  padding: 4%;
   width: 100%;
   height: auto;
   background-color: #FFF;
 
   li {
     color: $grey;
-    font-size: 16px;
+    font-size: 90%;
     font-weight: 400;
 
     span {
       color: $grey;
-      font-size: 16px;
-      margin-left: 20px;
+      font-size: 90%;
+      margin-left: 2%;
       font-weight: 300;
     }
-  }
-
-  a {
-    color: $main-color;
-    text-decoration: none;
-    font-size: 14px;
-    font-weight: 400;
   }
 }
