--- a/src/components/Index/SingleSubIndex.css
+++ b/src/components/Index/SingleSubIndex.css
@@ -55,4 +55,17 @@ button {
     font-size: 12px;
     color: #595959; }
 
+.phone-wrapper {
+  text-align: left;
+  margin-left: 1%;
+  color: #595959;
+  display: inline-block;
+  width: 200%; }
+  .phone-wrapper .phone-name {
+    font-size: 14px;
+    font-weight: 500; }
+  .phone-wrapper .phone-intro {
+    font-size: 12px;
+    margin-left: 1%; }
+
 /*# sourceMappingURL=SingleSubIndex.css.map */
