--- a/src/components/International/International.scss
+++ b/src/components/International/International.scss
@@ -4,40 +4,35 @@
 
 .international-wrapper {
   display: inline-block;
-  margin-top: 30px;
-  padding: 30px;
+  margin-top: 3%;
+  padding: 4%;
   width: 100%;
   height: auto;
   background-color: #FFF;
 
   p {
     color: $grey;
-    font-size: 14px;
+    font-size: 90%;
     font-weight: 400;
   }
-}
 
-.words-wrapper {
-  width: 650px;
-  display: inline-block;
-}
+  .words-wrapper {
+    display: inline-block;
+  }
 
-.american-photo-wrapper {
-  float: right;
-  display: inline-block;
-  background-size: 100% 100%;
-  background-repeat: no-repeat;
-  width: 400px;
-  height: 250px;
-  margin: 0 0 0 40px;
-}
+  .american-photo-wrapper {
+    display: inline-block;
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+    padding: 13% 20%;
+    margin-left: 8%;
+  }
 
-.european-photo-wrapper {
-  float: left;
-  display: inline-block;
-  background-size: 100% 100%;
-  background-repeat: no-repeat;
-  width: 440px;
-  height: 250px;
-  margin: 0 40px 0 0;
+  .european-photo-wrapper {
+    display: inline-block;
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+    padding: 13% 20%;
+    margin-left: 8%;
+  }
 }
