--- a/src/components/Train/TrainTitle.css
+++ b/src/components/Train/TrainTitle.css
@@ -21,13 +21,12 @@ button {
  */
 .title-wrapper {
   display: inline-block;
-  margin-top: 100px;
-  padding: 80px 50px;
+  margin-top: 10%;
+  padding: 10% 5%;
   width: 100%;
-  height: 250px;
   background-size: 100% 100%;
   color: #ffffff;
-  font-size: 60px;
+  font-size: 300%;
   font-weight: 500;
   letter-spacing: 5px; }
 
