--- a/src/components/Index/SingleSubIndex.css
+++ b/src/components/Index/SingleSubIndex.css
@@ -26,7 +26,7 @@ button {
   text-align: center;
   width: 170px;
   display: inline-block; }
-  .single-sub:hover .name, .single-sub:hover .intro {
+  .single-sub:hover .name, .single-sub:hover .intro, .single-sub:hover .phone-name, .single-sub:hover .phone-intro {
     color: #4e7ede;
     -webkit-transition: all, 0.3s;
     -moz-transition: all, 0.3s;
