--- a/src/components/Layout/Navigator.scss
+++ b/src/components/Layout/Navigator.scss
@@ -3,7 +3,7 @@
 @import "../../assets/scss/mixin";
 
 .nav-wrapper {
-  height: 6%;
+  height: 8%;
   width: 100%;
   z-index: 10;
   background-color: $white-color;
@@ -11,9 +11,10 @@
   box-shadow: 0 1px 3px $light-grey;
 
   .left-wrapper {
-    width: 10%;
+    width: 30%;
+    margin-left: -5%;
     display: inline-block;
-    padding-top: 1%;
+    padding-top: 1.5%;
     cursor: pointer;
     p {
       font-weight: 400;
@@ -25,9 +26,10 @@
     display: inline-block;
     padding-top: 1%;
     width: 80%;
+    margin-left: -10%;
 
     .el-button, .el-dropdown {
-      padding-left: 1%;
+      padding-left: 2%;
       font-size: 90%;
       font-weight: 400;
       color: $grey;
