--- a/src/components/Routine/Routine.css
+++ b/src/components/Routine/Routine.css
@@ -19,18 +19,23 @@ button {
 /*
  * grid
  */
-.index-wrapper {
+.committee-wrapper {
   display: inline-block;
   margin-top: 3%;
   padding: 4%;
   width: 100%;
   height: auto;
   background-color: #FFF; }
-  .index-wrapper p {
+  .committee-wrapper p {
     color: #595959;
     font-size: 90%;
     font-weight: 400; }
-  .index-wrapper .routine-wrapper {
-    margin-left: -5%; }
+  .committee-wrapper a {
+    color: #4e7ede;
+    text-decoration: none;
+    font-weight: 400; }
+  .committee-wrapper .href-span {
+    color: #4e7ede;
+    cursor: pointer; }
 
-/*# sourceMappingURL=Index.css.map */
+/*# sourceMappingURL=Routine.css.map */
