--- a/src/components/Education/Education.css
+++ b/src/components/Education/Education.css
@@ -21,8 +21,8 @@ button {
  */
 .education-wrapper {
   display: inline-block;
-  margin-top: 30px;
-  padding: 30px;
+  margin-top: 3%;
+  padding: 4%;
   width: 100%;
   height: auto;
   background-color: #FFF; }
