--- a/src/components/Education/Education.scss
+++ b/src/components/Education/Education.scss
@@ -4,8 +4,8 @@
 
 .education-wrapper {
   display: inline-block;
-  margin-top: 30px;
-  padding: 30px;
+  margin-top: 3%;
+  padding: 4%;
   width: 100%;
   height: auto;
   background-color: #FFF;
