--- a/src/components/Routine/RoutineTitle.scss
+++ b/src/components/Routine/RoutineTitle.scss
@@ -5,11 +5,12 @@
 .title-wrapper {
   display: inline-block;
   margin-top: 10%;
-  padding: 10% 5%;
+  padding: 2% 5%;
   width: 100%;
   background-size: 100% 100%;
   color: $grey;
   font-size: 300%;
   font-weight: 500;
   letter-spacing: 5px;
+  text-shadow: 0 0 10px $light-grey;
 }
