--- a/src/components/Index/SingleNotice.scss
+++ b/src/components/Index/SingleNotice.scss
@@ -7,10 +7,20 @@
   border-bottom: solid 1px $border-color;
   width: 100%;
 
+  a {
+    color: $grey;
+    text-decoration: none;
+    font-weight: 400;
+    &:hover {
+      @include transition(all, 0.3s);
+      color: $main-color;
+    }
+  }
+
   .content {
     cursor: pointer;
     display: inline-block;
-    font-size: 80%;
+    font-size: 90%;
     font-weight: 400;
     color: $grey;
 
@@ -26,6 +36,7 @@
     font-size: 80%;
     font-weight: 300;
     color: $light-grey;
+    margin-top: 1%;
   }
 
 }
