--- a/src/components/Routine/Routine.scss
+++ b/src/components/Routine/Routine.scss
@@ -2,7 +2,7 @@
 @import "../../assets/scss/base";
 @import "../../assets/scss/mixin";
 
-.committee-wrapper {
+.routine-wrapper {
   margin-top: 3%;
   padding: 4%;
   width: 100%;
