--- a/src/components/Train/Train.css
+++ b/src/components/Train/Train.css
@@ -31,7 +31,7 @@ button {
     font-size: 90%;
     font-weight: 400; }
   .train-wrapper a {
-    color: #4e7ede;
+    color: #316fb3;
     text-decoration: none;
     font-weight: 400; }
 
