--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -1,7 +1,7 @@
 $background-color: #f3f3f3;
 $white-color: #ffffff;
-$main-color: #4e7ede;
-$sub-color: #5689f2;
+$main-color: rgb(49, 111, 179);
+$sub-color: rgb(60, 100, 170);
 $grey: #595959;
 $light-grey: #bababa;
 $green-color: #7abd78;
