--- a/src/components/Certificate/Certificate.css
+++ b/src/components/Certificate/Certificate.css
@@ -34,11 +34,11 @@ button {
 .sub-title {
   font-size: 100%;
   font-weight: 400;
-  color: #4e7ede;
+  color: #ffffff;
+  background-color: #316fb3;
   padding: 0.2% 2%;
   border-radius: 100px;
-  border: 1px #4e7ede solid;
-  background-color: #ffffff;
+  border: 1px #316fb3 solid;
   margin: 3% 0; }
 
 .certificate-table {
@@ -47,7 +47,7 @@ button {
   font-size: 90%;
   font-weight: 400; }
   .certificate-table th {
-    color: #4e7ede; }
+    color: #316fb3; }
   .certificate-table td {
     color: #595959; }
 
@@ -58,8 +58,13 @@ button {
   top: 40%;
   left: 80%;
   padding: 1%;
-  background-color: #5689f2;
-  opacity: 0.5; }
+  background-color: #3c64aa;
+  opacity: 0.5;
+  -webkit-transition: all, 0.3s;
+  -moz-transition: all, 0.3s;
+  -ms-transition: all, 0.3s;
+  -o-transition: all, 0.3s;
+  transition: all, 0.3s; }
   .left-certificate-wrapper b {
     color: #ffffff; }
   .left-certificate-wrapper li {
