--- a/src/components/Education/Education.css
+++ b/src/components/Education/Education.css
@@ -31,7 +31,7 @@ button {
     font-size: 14px;
     font-weight: 400; }
   .education-wrapper a {
-    color: #4e7ede;
+    color: #316fb3;
     text-decoration: none;
     font-size: 14px;
     font-weight: 400; }
