--- a/src/components/Index/NoticeIndex.css
+++ b/src/components/Index/NoticeIndex.css
@@ -34,18 +34,19 @@ button {
   margin: 3% 0 0 70%;
   padding: 1% 5%;
   border-radius: 100px;
-  background-color: #4e7ede;
+  background-color: #316fb3;
   color: #ffffff;
   font-size: 80%;
   vertical-align: middle;
   cursor: pointer;
+  font-weight: 400;
   -webkit-transition: all, 0.3s;
   -moz-transition: all, 0.3s;
   -ms-transition: all, 0.3s;
   -o-transition: all, 0.3s;
   transition: all, 0.3s; }
   .more-button:hover {
-    background-color: #5689f2;
+    background-color: #3c64aa;
     -webkit-transition: all, 0.3s;
     -moz-transition: all, 0.3s;
     -ms-transition: all, 0.3s;
