--- a/src/components/Index/SingleNotice.css
+++ b/src/components/Index/SingleNotice.css
@@ -23,6 +23,15 @@ button {
   padding: 1.5%;
   border-bottom: solid 1px #e8e8e8;
   width: 100%; }
+  .single-notice-wrapper:hover {
+    cursor: pointer; }
+    .single-notice-wrapper:hover .content, .single-notice-wrapper:hover .time {
+      -webkit-transition: all, 0.3s;
+      -moz-transition: all, 0.3s;
+      -ms-transition: all, 0.3s;
+      -o-transition: all, 0.3s;
+      transition: all, 0.3s;
+      color: #316fb3; }
   .single-notice-wrapper a {
     color: #595959;
     text-decoration: none;
@@ -33,20 +42,13 @@ button {
       -ms-transition: all, 0.3s;
       -o-transition: all, 0.3s;
       transition: all, 0.3s;
-      color: #4e7ede; }
+      color: #316fb3; }
   .single-notice-wrapper .content {
     cursor: pointer;
     display: inline-block;
     font-size: 90%;
     font-weight: 400;
     color: #595959; }
-    .single-notice-wrapper .content:hover {
-      -webkit-transition: all, 0.3s;
-      -moz-transition: all, 0.3s;
-      -ms-transition: all, 0.3s;
-      -o-transition: all, 0.3s;
-      transition: all, 0.3s;
-      color: #4e7ede; }
   .single-notice-wrapper .time {
     float: right;
     display: inline-block;
