--- a/src/components/Index/SingleNotice.scss
+++ b/src/components/Index/SingleNotice.scss
@@ -7,6 +7,15 @@
   border-bottom: solid 1px $border-color;
   width: 100%;
 
+  &:hover {
+    cursor: pointer;
+
+    .content, .time {
+      @include transition(all, 0.3s);
+      color: $main-color;
+    }
+  }
+
   a {
     color: $grey;
     text-decoration: none;
@@ -24,10 +33,6 @@
     font-weight: 400;
     color: $grey;
 
-    &:hover {
-      @include transition(all, 0.3s);
-      color: $main-color;
-    }
   }
 
   .time {
