--- a/src/components/Index/SingleSubIndex.css
+++ b/src/components/Index/SingleSubIndex.css
@@ -20,14 +20,13 @@ button {
  * grid
  */
 .single-sub {
-  padding: 2%;
   background-color: #ffffff;
   cursor: pointer;
   text-align: center;
-  width: 170px;
+  width: 160px;
   display: inline-block; }
-  .single-sub:hover .name, .single-sub:hover .intro, .single-sub:hover .phone-name, .single-sub:hover .phone-intro {
-    color: #4e7ede;
+  .single-sub:hover .name, .single-sub:hover .intro, .single-sub:hover .phone-intro {
+    color: #316fb3;
     -webkit-transition: all, 0.3s;
     -moz-transition: all, 0.3s;
     -ms-transition: all, 0.3s;
@@ -57,13 +56,30 @@ button {
 
 .phone-wrapper {
   text-align: left;
-  margin-left: 1%;
   color: #595959;
   display: inline-block;
-  width: 200%; }
+  margin: 2%; }
+  .phone-wrapper:hover .phone-name {
+    background-color: #316fb3;
+    color: #ffffff;
+    -webkit-transition: all, 0.3s;
+    -moz-transition: all, 0.3s;
+    -ms-transition: all, 0.3s;
+    -o-transition: all, 0.3s;
+    transition: all, 0.3s; }
   .phone-wrapper .phone-name {
+    background-color: #ffffff;
+    color: #316fb3;
+    border: 1px #316fb3 solid;
+    border-radius: 100px;
+    padding: 3px 20px;
     font-size: 14px;
-    font-weight: 500; }
+    font-weight: 400;
+    -webkit-transition: all, 0.3s;
+    -moz-transition: all, 0.3s;
+    -ms-transition: all, 0.3s;
+    -o-transition: all, 0.3s;
+    transition: all, 0.3s; }
   .phone-wrapper .phone-intro {
     font-size: 12px;
     margin-left: 1%; }
