--- a/src/components/International/International.scss
+++ b/src/components/International/International.scss
@@ -35,4 +35,12 @@
     padding: 13% 20%;
     margin-left: 8%;
   }
+
+  span {
+    color: $main-color;
+    text-decoration: none;
+    font-size: 14px;
+    font-weight: 400;
+    cursor: pointer;
+  }
 }
