--- a/src/components/Layout/Footer.css
+++ b/src/components/Layout/Footer.css
@@ -22,7 +22,7 @@ button {
 .footer-wrapper {
   height: auto;
   padding: 5% 0 5% 0;
-  background-color: #4e7ede;
+  background-color: #316fb3;
   text-align: center;
   color: #ffffff;
   margin-top: 10%; }
