--- a/src/components/Layout/Navigator.css
+++ b/src/components/Layout/Navigator.css
@@ -38,6 +38,7 @@ button {
     margin-top: 1%;
     vertical-align: top; }
     .nav-wrapper .right-wrapper .el-button, .nav-wrapper .right-wrapper .el-dropdown {
+      display: inline-block;
       padding-left: 2%;
       font-size: 90%;
       font-weight: 400;
@@ -53,26 +54,25 @@ button {
         -ms-transition: all 0.5s;
         -o-transition: all 0.5s;
         transition: all 0.5s;
-        color: #4e7ede; }
+        color: #316fb3; }
       .nav-wrapper .right-wrapper .el-button /deep/ .el-icon-caret-bottom:before, .nav-wrapper .right-wrapper .el-dropdown /deep/ .el-icon-caret-bottom:before {
         font-size: 60%; }
 
 li {
-  padding: 2px 10px;
+  padding: 0 10px;
   width: 150px;
-  font-size: 14px;
+  font-size: 90%;
   color: #595959; }
   li:hover {
     background-color: #f3f3f3;
-    color: #4e7ede; }
+    color: #316fb3; }
     li:hover a {
-      color: #4e7ede; }
+      color: #316fb3; }
 
 .el-dropdown {
   margin-left: 10px; }
 
 .el-dropdown-menu {
-  margin-top: 5px;
   margin-left: 20px; }
   .el-dropdown-menu a {
     color: #595959;
@@ -91,6 +91,6 @@ li {
     -o-transition: all 0.5s;
     transition: all 0.5s;
     background-color: #f3f3f3;
-    color: #4e7ede; }
+    color: #316fb3; }
 
 /*# sourceMappingURL=Navigator.css.map */
