--- a/src/components/Layout/Navigator.scss
+++ b/src/components/Layout/Navigator.scss
@@ -25,6 +25,7 @@
     vertical-align: top;
 
     .el-button, .el-dropdown {
+      display: inline-block;
       padding-left: 2%;
       font-size: 90%;
       font-weight: 400;
@@ -45,9 +46,9 @@
 }
 
 li {
-  padding: 2px 10px;
+  padding: 0 10px;
   width: 150px;
-  font-size: 14px;
+  font-size: 90%;
   color: $grey;
 
   &:hover {
@@ -65,7 +66,7 @@ li {
 }
 
 .el-dropdown-menu {
-  margin-top: 5px;
+  // margin-top: 5px;
   margin-left: 20px;
 
   a {
