--- a/src/components/Routine/RoutineTitle.css
+++ b/src/components/Routine/RoutineTitle.css
@@ -25,10 +25,10 @@ button {
   padding: 2% 5%;
   width: 100%;
   background-size: 100% 100%;
-  color: #595959;
+  color: #ffffff;
   font-size: 300%;
   font-weight: 500;
   letter-spacing: 5px;
-  text-shadow: 0 0 10px #bababa; }
+  text-shadow: 0 0 10px #595959; }
 
 /*# sourceMappingURL=RoutineTitle.css.map */
