--- a/src/components/Util/DivHeader.css
+++ b/src/components/Util/DivHeader.css
@@ -22,9 +22,9 @@ button {
 .header-wrapper {
   padding-bottom: 3%; }
   .header-wrapper h4 {
-    border-left: 5px solid #4e7ede;
+    border-left: 5px solid #316fb3;
     padding-left: 1%;
-    color: #4e7ede;
+    color: #316fb3;
     font-size: 100%;
     font-weight: 400; }
 
