--- a/src/components/International/International.scss
+++ b/src/components/International/International.scss
@@ -28,6 +28,13 @@
     margin-left: 8%;
   }
 
+  .american-file-wrapper {
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+    padding: 55% 40%;
+    margin: 0 5%;
+  }
+
   .european-photo-wrapper {
     display: inline-block;
     background-size: 100% 100%;
