--- a/src/components/International/International.css
+++ b/src/components/International/International.css
@@ -37,7 +37,7 @@ button {
     width: 40%;
     margin-left: 8%;
     background-color: #FFF; }
-  .international-wrapper .american-file-wrapper {
+  .international-wrapper .file-wrapper {
     background-size: 100% 100%;
     background-repeat: no-repeat;
     padding: 55% 40%;
