--- a/src/components/Committee/Committee.scss
+++ b/src/components/Committee/Committee.scss
@@ -14,6 +14,8 @@
     color: $grey;
     font-size: 90%;
     font-weight: 400;
+    list-style-type: circle;
+    margin-left: 5%;
 
     span {
       color: $grey;
