--- a/src/components/Index/Index.scss
+++ b/src/components/Index/Index.scss
@@ -5,7 +5,7 @@
 .index-wrapper {
   display: inline-block;
   margin-top: 3%;
-  padding: 4%;
+  padding: 2%;
   width: 100%;
   height: auto;
   background-color: #FFF;
@@ -17,6 +17,18 @@
   }
 
   .routine-wrapper {
-    margin-left: -5%;
+    margin: 3% 0 3% -5%;
+  }
+
+  .sub-title {
+    font-size: 90%;
+    font-weight: 400;
+
+    color: $white-color;
+    background-color: $main-color;
+    padding: 0.2% 2%;
+    margin-top: 1%;
+    border-radius: 100px;
+    //border: 1px $main-color solid;
   }
 }
