--- a/src/components/International/International.scss
+++ b/src/components/International/International.scss
@@ -27,7 +27,7 @@
     background-color: #FFF;
   }
 
-  .american-file-wrapper {
+  .file-wrapper {
     background-size: 100% 100%;
     background-repeat: no-repeat;
     padding: 55% 40%;
