--- a/src/components/Routine/Routine.css
+++ b/src/components/Routine/Routine.css
@@ -20,8 +20,7 @@ button {
  * grid
  */
 .routine-wrapper {
-  margin-top: 3%;
-  padding: 4%;
+  padding: 0 4% 4% 4%;
   width: 100%;
   height: auto;
   background-color: #FFF; }
@@ -34,6 +33,32 @@ button {
     text-decoration: none;
     font-weight: 400; }
   .routine-wrapper .href-span {
+    color: #316fb3;
+    cursor: pointer; }
+  .routine-wrapper .sub-title {
+    font-size: 90%;
+    font-weight: 400;
+    color: #ffffff;
+    background-color: #316fb3;
+    padding: 0.2% 2%;
+    margin: 0 0 2% 0;
+    border-radius: 100px; }
+
+.routine-intro-wrapper {
+  padding: 4%;
+  margin-top: 3%;
+  width: 100%;
+  height: auto;
+  background-color: #FFF; }
+  .routine-intro-wrapper p {
+    color: #595959;
+    font-size: 90%;
+    font-weight: 400; }
+  .routine-intro-wrapper a {
+    color: #316fb3;
+    text-decoration: none;
+    font-weight: 400; }
+  .routine-intro-wrapper .href-span {
     color: #316fb3;
     cursor: pointer; }
 
