--- a/src/components/Routine/Routine.scss
+++ b/src/components/Routine/Routine.scss
@@ -3,8 +3,44 @@
 @import "../../assets/scss/mixin";
 
 .routine-wrapper {
-  margin-top: 3%;
+  padding: 0 4% 4% 4%;
+  width: 100%;
+  height: auto;
+  background-color: #FFF;
+
+  p {
+    color: $grey;
+    font-size: 90%;
+    font-weight: 400;
+  }
+
+  a {
+    color: $main-color;
+    text-decoration: none;
+    font-weight: 400;
+  }
+
+  .href-span {
+    color: $main-color;
+    cursor: pointer;
+  }
+
+  .sub-title {
+    font-size: 90%;
+    font-weight: 400;
+
+    color: $white-color;
+    background-color: $main-color;
+    padding: 0.2% 2%;
+    margin: 0 0 2% 0;
+    border-radius: 100px;
+    //border: 1px $main-color solid;
+  }
+}
+
+.routine-intro-wrapper {
   padding: 4%;
+  margin-top: 3%;
   width: 100%;
   height: auto;
   background-color: #FFF;
