--- a/src/components/Sub/Sub.scss
+++ b/src/components/Sub/Sub.scss
@@ -3,8 +3,10 @@
 @import "../../assets/scss/mixin";
 
 .sub-wrapper {
+  display: inline-block;
   margin-top: 3%;
-  padding: 2%;
+  vertical-align: top;
+  padding: 5%;
   width: 100%;
   height: auto;
   background-color: #FFF;
