--- a/src/components/Committee/Committee.css
+++ b/src/components/Committee/Committee.css
@@ -31,7 +31,7 @@ button {
     font-size: 90%;
     font-weight: 400;
     list-style-type: circle;
-    margin-left: 5%; }
+    margin: 2% 5%; }
     .committee-wrapper li span {
       color: #595959;
       font-size: 90%;
