--- a/src/components/Committee/Committee.scss
+++ b/src/components/Committee/Committee.scss
@@ -15,7 +15,7 @@
     font-size: 90%;
     font-weight: 400;
     list-style-type: circle;
-    margin-left: 5%;
+    margin: 2% 5%;
 
     span {
       color: $grey;
