--- a/src/components/Index/Index.css
+++ b/src/components/Index/Index.css
@@ -31,14 +31,9 @@ button {
     font-size: 90%;
     font-weight: 400; }
   .index-wrapper .routine-wrapper {
-    margin: 3% 0 3% -5%; }
-  .index-wrapper .sub-title {
-    font-size: 90%;
-    font-weight: 400;
-    color: #ffffff;
-    background-color: #316fb3;
-    padding: 0.2% 2%;
-    margin-top: 1%;
-    border-radius: 100px; }
+    padding: 10% 30%;
+    background-size: 70%;
+    background-repeat: no-repeat;
+    background-position-x: center; }
 
 /*# sourceMappingURL=Index.css.map */
