--- a/src/components/DataOpen/DataOpen.scss
+++ b/src/components/DataOpen/DataOpen.scss
@@ -2,7 +2,7 @@
 @import "../../assets/scss/base";
 @import "../../assets/scss/mixin";
 
-.education-wrapper {
+.data-open-wrapper {
   display: inline-block;
   margin-top: 3%;
   padding: 4%;
@@ -12,15 +12,26 @@
 
   p {
     color: $grey;
-    font-size: 14px;
+    font-size: 90%;
     font-weight: 400;
-    text-align: justify;
   }
 
-  a {
+  .words-wrapper {
+    display: inline-block;
+    padding: 0 10%;
+
+    .english {
+      font-size: 100%;
+      line-height: 30px;
+      text-align: justify;
+    }
+  }
+
+  span {
     color: $main-color;
     text-decoration: none;
     font-size: 14px;
     font-weight: 400;
+    cursor: pointer;
   }
 }
