--- a/src/components/Index/Index.css
+++ b/src/components/Index/Index.css
@@ -29,10 +29,11 @@ button {
   .index-wrapper p {
     color: #595959;
     font-size: 90%;
-    font-weight: 400; }
+    font-weight: 400;
+    text-align: justify; }
   .index-wrapper .routine-wrapper {
     padding: 10% 30%;
-    background-size: 70%;
+    background-size: 80%;
     background-repeat: no-repeat;
     background-position-x: center; }
 
