--- a/src/components/Index/Index.scss
+++ b/src/components/Index/Index.scss
@@ -14,11 +14,12 @@
     color: $grey;
     font-size: 90%;
     font-weight: 400;
+    text-align: justify;
   }
 
   .routine-wrapper {
     padding: 10% 30%;
-    background-size: 70%;
+    background-size: 80%;
     background-repeat: no-repeat;
     background-position-x: center;
   }
