<dev>:<new progress page>

--- a/src/components/Layout/Navigator.css
+++ b/src/components/Layout/Navigator.css
@@ -93,4 +93,7 @@ li {
     background-color: #f3f3f3;
     color: #316fb3; }
 
+.long-dropdown {
+  width: 250px; }
+
 /*# sourceMappingURL=Navigator.css.map */
