--- a/src/components/Index/SingleSubIndex.css
+++ b/src/components/Index/SingleSubIndex.css
@@ -22,11 +22,17 @@ button {
 .single-sub {
   background-color: #ffffff;
   cursor: pointer;
-  text-align: center;
-  width: 160px;
-  display: inline-block; }
-  .single-sub:hover .name, .single-sub:hover .intro, .single-sub:hover .phone-intro {
+  text-align: center; }
+  .single-sub:hover .intro {
     color: #316fb3;
+    -webkit-transition: all, 0.3s;
+    -moz-transition: all, 0.3s;
+    -ms-transition: all, 0.3s;
+    -o-transition: all, 0.3s;
+    transition: all, 0.3s; }
+  .single-sub:hover .name {
+    background-color: #316fb3;
+    color: #ffffff;
     -webkit-transition: all, 0.3s;
     -moz-transition: all, 0.3s;
     -ms-transition: all, 0.3s;
@@ -46,42 +52,25 @@ button {
     width: 80%;
     height: 60%; }
   .single-sub .name {
-    font-size: 14px;
-    color: #595959;
-    margin: 120px 0 5px 0;
-    font-weight: 500; }
-  .single-sub .intro {
-    font-size: 12px;
-    color: #595959; }
-
-.phone-wrapper {
-  text-align: left;
-  color: #595959;
-  display: inline-block;
-  margin: 2%; }
-  .phone-wrapper:hover .phone-name {
-    background-color: #316fb3;
-    color: #ffffff;
-    -webkit-transition: all, 0.3s;
-    -moz-transition: all, 0.3s;
-    -ms-transition: all, 0.3s;
-    -o-transition: all, 0.3s;
-    transition: all, 0.3s; }
-  .phone-wrapper .phone-name {
-    background-color: #ffffff;
-    color: #316fb3;
     border: 1px #316fb3 solid;
     border-radius: 100px;
-    padding: 3px 20px;
     font-size: 14px;
+    background-color: #ffffff;
+    color: #316fb3;
+    margin: 0 18% 5% 18%;
     font-weight: 400;
     -webkit-transition: all, 0.3s;
     -moz-transition: all, 0.3s;
     -ms-transition: all, 0.3s;
     -o-transition: all, 0.3s;
     transition: all, 0.3s; }
-  .phone-wrapper .phone-intro {
-    font-size: 12px;
-    margin-left: 1%; }
+  .single-sub .intro {
+    font-size: 13px;
+    color: #595959;
+    -webkit-transition: all, 0.3s;
+    -moz-transition: all, 0.3s;
+    -ms-transition: all, 0.3s;
+    -o-transition: all, 0.3s;
+    transition: all, 0.3s; }
 
 /*# sourceMappingURL=SingleSubIndex.css.map */
