--- a/src/components/Index/SingleSubIndex.scss
+++ b/src/components/Index/SingleSubIndex.scss
@@ -6,13 +6,16 @@
   background-color: $white-color;
   cursor: pointer;
   text-align: center;
-  width: 160px;
-  display: inline-block;
 
   &:hover {
-
-    .name, .intro, .phone-intro {
+    .intro {
       color: $main-color;
+      @include transition(all, 0.3s);
+    }
+
+    .name {
+      background-color: $main-color;
+      color: $white-color;
       @include transition(all, 0.3s);
     }
   }
@@ -30,45 +33,19 @@
   }
 
   .name {
-    font-size: 14px;
-    color: $grey;
-    margin: 120px 0 5px 0;
-    font-weight: 500;
-  }
-
-  .intro {
-    font-size: 12px;
-    color: $grey;
-  }
-}
-
-.phone-wrapper {
-  text-align: left;
-  color: $grey;
-  display: inline-block;
-  margin: 2%;
-
-  &:hover {
-    .phone-name {
-      background-color: $main-color;
-      color: $white-color;
-      @include transition(all, 0.3s);
-    }
-  }
-
-  .phone-name {
-    background-color: $white-color;
-    color: $main-color;
     border: 1px $main-color solid;
     border-radius: 100px;
-    padding: 3px 20px;
     font-size: 14px;
+    background-color: $white-color;
+    color: $main-color;
+    margin: 0 18% 5% 18%;
     font-weight: 400;
     @include transition(all, 0.3s);
   }
 
-  .phone-intro {
-    font-size: 12px;
-    margin-left: 1%;
+  .intro {
+    font-size: 13px;
+    color: $grey;
+    @include transition(all, 0.3s);
   }
 }
