--- a/src/components/Index/SubIndex.scss
+++ b/src/components/Index/SubIndex.scss
@@ -3,7 +3,7 @@
 @import "../../assets/scss/mixin";
 
 .sub-index-wrapper {
-  display: inline-block;
+  // display: inline-block;
   margin-top: 3%;
   padding: 2%;
   width: 100%;
