--- a/src/components/Index/SingleSubIndex.scss
+++ b/src/components/Index/SingleSubIndex.scss
@@ -17,13 +17,14 @@
     color: $main-color;
 
     .name {
-      font-size: 20px;
+      font-size: 16px;
       font-weight: 400;
     }
 
     .intro {
-      font-size: 16px;
+      font-size: 14px;
       color: $grey;
+      font-weight: 400;
     }
   }
 
