--- a/src/components/Sub/Sub.scss
+++ b/src/components/Sub/Sub.scss
@@ -45,3 +45,47 @@
     }
   }
 }
+
+.one-col-sub-wrapper {
+  display: inline-block;
+  margin-top: 1%;
+  vertical-align: top;
+  padding: 2%;
+  width: 100%;
+  height: auto;
+  background-color: #FFF;
+  text-align: justify;
+
+  a {
+    color: $main-color;
+    text-decoration: none;
+    font-weight: 600;
+  }
+
+  .href-span {
+    color: $main-color;
+    cursor: pointer;
+  }
+
+  .sub-title {
+    font-size: 90%;
+    font-weight: 400;
+
+    color: $white-color;
+    background-color: $main-color;
+    padding: 0.1% 0.6%;
+    margin-top: 0.5%;
+    border-radius: 100px;
+    //border: 1px $main-color solid;
+  }
+
+  .sub-content {
+    margin: 0.5% 0;
+
+    p {
+      color: $grey;
+      font-size: 90%;
+      font-weight: 400;
+    }
+  }
+}
